fixup! squash! Bug 27476: Implement about:torconnect captive portal within Tor Browser
Bug 40878: updated the reds we use in dark mode

--- a/browser/components/torconnect/content/aboutTorConnect.css
+++ b/browser/components/torconnect/content/aboutTorConnect.css
@@ -79,7 +79,15 @@
 }
 
 #breadcrumbs .error {
-  color: var(--red-60);
+  color: var(--in-content-danger-button-background);
+}
+
+#breadcrumbs .error:hover {
+  color: var(--in-content-danger-button-background-hover);
+}
+
+#breadcrumbs .error:active {
+  color: var(--in-content-danger-button-background-active);
 }
 
 #connection-assist {
